package Warning;

/**
 * 所有策略的通用接口
 */
public interface WarningStrategy {

    void takeMeasure();
    void NotifyMessage();
}
