@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
skinparam linetype ortho

interface WarningStrategy{
+ takeMeasure(): void
}

Class FirstLevel{
+ takeMeasure(): void
}

Class SecondLevel{
+ takeMeasure(): void
}
Class EarlyWarningSystem{
- strategy: WarningStrategy
+ setStrategy(WarningStrategy strategy): void
}

class EarlyWarningListener{}

FirstLevel ..|> WarningStrategy
SecondLevel ..|> WarningStrategy
EarlyWarningSystem o-> WarningStrategy
EarlyWarningListener --> EarlyWarningSystem
@enduml